# wadamesh

./: .gitignore  CONTRIBUTING.md  DEVICES.md  NOTICE  README.md  RELEASE_CHANNELS.md  REVIEW_NOTES_2026-06-22.md  TLORA_PAGER_M7_HW_DEBUG_LOG.md  TLORA_PAGER_PORT.md  TLORA_PAGER_PORT_MILESTONES.md  TLORA_PAGER_SHORTCUTS.md  WADAMESH_SPLIT_PLAN.md  partitions_tft_touch.csv  platformio.ini
boards/: attaky_mesh_series.json  heltec_v4_r8.json  rak_tap_v2.json  wiscore_rak3312.json
deploy/: README.md  gen-meshamerica-catalog.py  meshamerica-catalog.json  tile-transcode.py  wadamesh-tile-transcode.service
deploy/flasher/: index.html  manifest-heltec-v4-tft.json
deploy/nginx/: firmware.wadamesh.com.conf  tiles.wadamesh.com.conf
deploy/site/: docs.html  index.html
deploy/tanmatsu-app/com.wadamesh.wadamesh/: metadata.json
include/: LvglPsramAlloc.h  lv_conf.h
release-notes/: beta_12.txt  beta_13.txt  beta_21.txt  beta_28.txt  beta_37.txt  beta_4.txt  beta_41.txt  beta_43.txt  beta_45.txt  beta_47.txt  beta_48.txt  beta_49.txt  beta_5.txt  beta_50.txt  beta_7.txt
scripts/: deploy-site.sh  gnuboy_opt.py  inject_wifi_env.py  release.sh  win_spawn_fix.py
scripts/doc/: capture.py
scripts/mqtt/: decode_example.py
src/: AbstractUITask.h  DataStore.cpp  DataStore.h  MyMesh.cpp  MyMesh.h  NodePrefs.h  WiFiConfig.h  main.cpp
src/helpers/: ClockFloorRTC.h
src/helpers/esp32/: MqttBridge.cpp  MqttBridge.h  MultiTransportCompanionInterface.cpp  MultiTransportCompanionInterface.h  SdNvsPrefs.cpp  SdNvsPrefs.h  TCPCompanionServer.cpp  TCPCompanionServer.h  TouchPrefsStore.cpp  TouchPrefsStore.h  WebMirror.cpp  WebMirror.h  WebSocketCompanionServer.cpp  WebSocketCompanionServer.h  WifiRuntimeStore.cpp
src/helpers/input/: HeltecV4CapTouch.cpp  PagerEncoder.cpp  PagerEncoder.h  PagerKeyboard.cpp  PagerKeyboard.h  RakTapV2Touch.cpp  TDeckTouch.cpp
src/helpers/ui/: ST7796LCDDisplay.cpp  ST7796LCDDisplay.h
src/ui-touch/: ChannelUtil.cpp  ChannelUtil.h  GameBoy.cpp  GameBoy.h  KeyboardLayouts.cpp  KeyboardLayouts.h  SnakeGame.cpp  SnakeGame.h  TetrisGame.cpp  TetrisGame.h  TouchSleep.cpp  TouchSleep.h  UITask.cpp  UITask.h  device_caps.h  emoji_data.c  emoji_data.h  extras_font_12.c  extras_font_14.c  extras_font_16.c  i18n.cpp  i18n.h  person_font.c  star_font_14.c  star_font_28.c
src/ui-touch/assets/: lockscreen_placeholder_jpg.h  lockscreen_wallpaper_pager_rgb565.h  lockscreen_wallpaper_rgb565.h
src/ui-touch/gnuboy/: VENDOR.md  gnuboy.h  sound.c
tdisplay_p4/: .gitignore  build.sh  esp-idf  esp-idf-tools  fetch-deps.sh
tdisplay_p4/components/: ardlibs  esp_hosted  lvgl
tdisplay_p4/components/RadioLib/: CMakeLists.txt
tdisplay_p4/components/c6_at/: CMakeLists.txt  c6_at.c
tdisplay_p4/components/c6_at/include/: C6Socket.h  C6WifiShim.h  c6_at.h
tdisplay_p4/components/meshcore/: CMakeLists.txt
tdisplay_p4/components/wadamesh_app/: CMakeLists.txt
tdisplay_p4/main/: CMakeLists.txt  idf_component.yml  main.cpp
tdisplay_p4/partition_tables/: tdisplay_p4_16M.csv
tdisplay_p4/sdkconfigs/: general  tdisplay_p4  wadamesh
variants/attaky_mesh_series/: AttakyMeshSeriesBoard.cpp  AttakyMeshSeriesBoard.h  AttakyMeshSeriesKeys.cpp  AttakyMeshSeriesKeys.h  AttakyMeshSeriesTouch.cpp
variants/heltec_v4/: HeltecV4Board.cpp  LGFXDisplay.cpp  LGFXDisplay.h  target.cpp  target.h
variants/lilygo_tlora_pager/: Es8311Codec.cpp  Es8311Codec.h  TLoraPagerBoard.cpp  TLoraPagerBoard.h  target.cpp
variants/rak_tap_v2/: RakTapV2Board.h  partitions_rak_tap_v2_touch.csv  target.cpp  target.h
variants/tanmatsu/: TanmatsuLoraRadio.cpp  TanmatsuLoraRadio.h
variants/tdisplay_p4/: HI8561Display.cpp  HI8561Display.h  Hi8561Touch.cpp  P4Audio.cpp  P4Audio.h  RM69A10Display.cpp  RM69A10Display.h  TDISPLAY_P4_PORT.md  Xl9535.cpp  Xl9535.h  esp_lcd_hi8561.c  esp_lcd_rm69a10.cpp  ssl_client_stub.cpp  target.cpp  target.h
variants/thinknode_m9/: M9_PORT.md
